<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.gymaths.main.ActivityMain">
    <!--<item
        android:id="@+id/action_profile"
        android:orderInCategory="100"
        android:title="@string/profile"
        app:showAsAction="never" />-->
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/about"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_bug"
        android:orderInCategory="100"
        android:title="@string/bug"
        app:showAsAction="never" />
    <item
        android:id="@+id/manuel_utilisation"
        android:orderInCategory="100"
        android:title="@string/manuel"
        app:showAsAction="never" />
</menu>