<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.Fragment4">


    <!-- Titre de la section -->

    <!-- Choix de la section -->

    <TextView
        android:id="@+id/textView4"
        android:layout_width="295dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:background="@drawable/back"
        android:text="@string/regle_calculs"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="337dp"
        android:layout_height="320dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.41000003">


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnOperations"
                android:layout_width="0dp"
                android:layout_height="125dp"
                android:layout_margin="16dp"
                android:layout_marginTop="100dp"
                android:layout_weight="1"
                android:text="@string/operators"
                android:textSize="64sp" />

            <Button
                android:id="@+id/btnPriorities"
                android:layout_width="0dp"
                android:layout_height="125dp"
                android:layout_margin="16dp"
                android:layout_marginTop="100dp"
                android:layout_weight="1"
                android:text="@string/parentheses"
                android:textSize="64sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="88dp">

            <Button
                android:id="@+id/btnXSquared"
                android:layout_width="0dp"
                android:layout_height="125dp"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:text="@string/xSquaredSymbol"
                android:textSize="64sp" />

            <Button
                android:id="@+id/btnSqrt"
                android:layout_width="0dp"
                android:layout_height="125dp"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:text="@string/sqrtSymbol"
                android:textSize="64sp" />

        </TableRow>

    </TableLayout>

    <!-- Retour au menu principal -->
    <!-- <Button
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" /> -->


</androidx.constraintlayout.widget.ConstraintLayout>