<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.Fragment3">


    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnRegleCalculs"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_margin="16dp"
            android:text="@string/regle_calculs"
            android:textSize="20sp" />


        <Button
            android:id="@+id/btnIdRemarquables"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_margin="16dp"
            android:text="@string/id_remarquables"
            android:textSize="20sp" />


        <Button
            android:id="@+id/btnEqIneq"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_margin="16dp"
            android:text="@string/eq_ineq"
            android:textSize="20sp" />

    </TableLayout>

    <ImageButton
        android:id="@+id/btnSupport"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/heart32"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>